# family-assistant-kernel

./: CLAUDE.md  pyproject.toml  review.md
docs/: Database Access.md  Feeds.md  Inference Pricing.md  Kernel Security.md
requirements/: dev.txt  main.txt
scripts/: create_cost_category.py  create_currency.py  create_user.py  ensure_rates.py  migrate.py  set_password.py
src/: main.py
src/application/: __init__.py  analytics.py  authentication.py  news.py  notifications.py  transactions.py  users.py
src/application/agents/: news.py  perception.py  preference.py
src/application/scheduler/: __init__.py  _primitives.py  _scheduler.py  hooks.py
src/application/scheduler/jobs/: __init__.py
src/application/scheduler/jobs/crawlers/: __init__.py  _base.py  iai.py  rss.py
src/application/scheduler/jobs/kernel/: __init__.py  exchange_rates.py  gc.py  preferences.py
src/config/: __init__.py
src/domain/: __init__.py  entities.py
src/domain/analytics/: pricing.py
src/domain/equity/: __init__.py  entities.py
src/domain/exchange_rates/: __init__.py  repository.py
src/domain/jobs/: __init__.py  entities.py  registry.py  value_objects.py
src/domain/news/: __init__.py  entities.py  signals.py  value_objects.py
src/domain/notifications/: __init__.py  entities.py
src/domain/prompts/: __init__.py
src/domain/transactions/: __init__.py  cost.py  exchange.py  income.py  repository.py  value_objects.py
src/domain/users/: __init__.py  entities.py
src/http/: __init__.py
src/http/contracts/: __init__.py  analytics.py  currency.py  equity.py  identity.py  jobs.py  news.py  shortcuts.py  transactions.py
src/http/resources/: analytics.py  costs.py  currencies.py  exchange.py  identity.py  incomes.py  jobs.py  news.py  notifications.py  transactions.py
src/infrastructure/: __init__.py  analytics.py  cache.py  dates.py  healthcheck.py  middleware.py  responses.py  tracing.py
src/infrastructure/agents/: __init__.py
src/infrastructure/database/: __init__.py  cqs.py  dal.py  session.py  tables.py
src/infrastructure/database/migrations/versions/: 1637d76700ba_.py  2a3b4c5d6e7f_add_exchange_rates_table.py  587e53fc78e5_news_jobs_analytics.py  a1b2c3d4e5f6_add_user_timezone.py  d8a213ae1732_add_filter_meta_to_analytics_ai.py  e265bfe32c8c_.py  fc447514f941_.py
src/infrastructure/errors/: __init__.py  handlers.py
src/infrastructure/query_services/: __init__.py  analytics.py
src/infrastructure/repositories/: __init__.py  analytics_ai.py  cost.py  currency.py  exchange.py  exchange_rates.py  income.py  jobs.py  news.py  users.py
src/integrations/: __init__.py  nbu.py  types.py
src/operational/: __init__.py  analytics.py  authentication.py  transactions.py
tests/: conftest.py
tests/integration/: conftest.py  test_analytics.py  test_currencies.py  test_notifications.py  test_user.py
tests/integration/transactions/: test_cost_shortcut.py  test_costs.py  test_currency_exchange.py  test_income.py  test_lookup_missing.py
tests/mock/: cache.py
tests/unit/: test_ai_analytics_contracts.py  test_analytics_fallback.py  test_database.py  test_gc.py  test_news_agents.py  test_preference_rules.py  test_pricing.py  test_tracing.py
