# ─────────────────────────────────────────────────────────
# pyproject.toml file is used for storing project metadata 
# according to the PEP 621 [https://peps.python.org/pep-0621]
# ─────────────────────────────────────────────────────────

[project]
name = "family-budget-bot"
version = "0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Dmytro Parfeniuk" } ]
requires-python = ">=3.12.0,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiomcache~=0.8.2",                 # async memcached client
    "alembic~=1.16.2",                  # migrations tool
    "argon2-cffi~=23.1.0",              # password hashing (OWASP recommended)
    "arq~=0.26.3",                      # async job queues in python on redis
    "beautifulsoup4~=4.13",             # HTML parsing for web crawlers
    "asyncpg~=0.30.0",                  # async PostgreSQL driver
    "fastapi~=0.115.14",                # web framework
    "feedparser~=6.0",                  # RSS/Atom feed parser
    "gunicorn~=23.0.0",                 # application web server (better workers experience)
    "httpx~=0.28.1",                    # http client
    "loguru~=0.7.3",                    # better logging experience
    "pydantic~=2.11.0",                 # data validation
    "pydantic-ai~=1.67.0",              # LLM Client
    "pydantic-settings~=2.13.1",        # better settings experience
    "pyjwt~=2.9.0",                     # JWT encoding/decoding
    "sentry-sdk[fastapi]~=2.32.0",      #  issues monitoring, profiling
    "slowapi~=0.1.9",                   # rate limiting for FastAPI
    "sqlalchemy[asyncio,mypy]~=2.0.41", # async ORM (includes mypy extension)
    "uvicorn[standard]~=0.35.0",        # async application web server
]

optional-dependencies.dev = [
    "asyncpg-stubs~=0.30.2",       # additional stubs
    "black~=24.8.0",               # formatting
    "flake8~=7.1.1",               # linter
    "ipdb~=0.13.13",               # debugger 
    "isort~=5.13.2",               # another formatting (imports sort)
    "mypy~=1.16.1",                # type checking
    "polyfactory~=2.22",           # fake data
    "pytest~=8.4.1",               # testing framework
    "pytest-asyncio~=1.0.0",       # async testing better experience
    "pytest-mock~=3.14.1",         # better mocking experience
    "pytest-xdist[psutil]~=3.6.1", # run tests in separate processes
    "respx~=0.22.0",               # mock httpx requests and http core libraries
]

[tool.black]
target-version = [ 'py312' ]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = 'venv'
src_paths = [ "src", "tests" ]

[tool.pytest.ini_options]
addopts = '-sq'
cache_dir = '/tmp'
asyncio_mode = 'auto'
python_files = 'test_*.py'
python_functions = 'test_*'
filterwarnings = [
    'ignore::RuntimeWarning',
    'ignore::UserWarning',
    "ignore::DeprecationWarning",
]
markers = [
    "use_db: recreate database tables for this test from the scratch",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
files = [ "src", "tests" ]
python_version = '3.12'
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
exclude = [ "venv", "migrations" ]

# Silence "type import errors" as our 3rd-party libs does not have types
# Check: https://mypy.readthedocs.io/en/latest/config_file.html#import-discovery
follow_imports = 'silent'

# [[tool.mypy.overrides]]
# ignore_missing_imports=true

[tool.pip-tools]
generate_hashes = true
